Wed Dec 31 11:51:41 GMT 2008  Colin Watson  <cjwatson@debian.org>

	Sort manual page candidates in one go just before displaying them,
	rather than insertion-sorting them along the way. Produces, very
	roughly, a 25% speed improvement for searches with many results
	(e.g. with --regex).

	* src/man.c (duplicate_candidates, compare_candidates): Simplify
	  interface by passing 'struct candidate' for both sides.
	  (compare_candidates): Explicitly stabilise the comparison as a
	  last resort, using a new add_index member.
	  (compare_candidates_qsort, free_candidate): New functions.
	  (add_candidate): Adjust calls to duplicate_candidates and
	  compare_candidates, requiring us to create the candidate structure
	  earlier. Note that the search produces quadratic-time behaviour.
	  Only compare candidates in cases of duplicates; otherwise just add
	  them to the end of the list and defer sorting until later. Use
	  free_candidate to free search->ult as well as search when freeing
	  superseded duplicates.
	  (sort_candidates): New function.
	  (man): Sort candidates before displaying them.

Tue Dec 30 13:08:35 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.4-pre2.
	* po/man-db.pot, po/*.po: Update.

Tue Dec 30 12:55:59 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/man5/manpath.man5 (FORMAT): Add space between
	  "MINCATWIDTH"/"MAXCATWIDTH"/"CATWIDTH" and "width".
	* man/po4a/po/id.po: Unfuzzy translations.

Tue Dec 30 12:52:26 GMT 2008  Arif E. Nugroho  <arif_endro@yahoo.com>

	* po/id.po, man/po4a/po/id.po: Update from Translation Project.

Sun Dec 28 00:27:23 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.4-pre1.
	* man/po4a/po/man-db-manpages.pot, man/po4a/po/*.po, po/man-db.pot,
	  po/*.po: Update.

Sun Dec 28 00:17:45 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/po4a/Makefile.am (PO4A_ARGS): Always generate output files
	  even if poorly translated, since Automake's generated rules will
	  get upset otherwise.
